recursion.cons.lessons.recursion.cons.Remove.scala.error
remove:5: error: not found: value supprime
    return supprime(l.tail, v) 
           ^remove:6: error: not found: value head
  } else return head::supprime(l.tail, v)
                ^remove:6: error: not found: value supprime
  } else return head::supprime(l.tail, v)
                      ^